test/compilable/imports/test10553.d
module imports.test10553;

private enum { a }
private enum E { a, b }

public enum { b }
private enum { public c }
