test/fail_compilation/fail9892.d
// 9892

enum
{
    a = b, //Segfault!
    b
}
